2020-10-20  Jay Berkenbilt  <ejb@ql.org>

	* Build option: add --disable-rpath option to ./configure, which
	disables passing -rpath to the linker when building shared
	libraries with libtool. Fixes #422.

2020-10-18  Jay Berkenbilt  <ejb@ql.org>

	* Note that InputSource::unreadCh is deprecated and will be
	removed in qpdf 11. Use seek(-1, SEEK_CUR) instead. This is what
	it has always effectively done with some input sources and some
	operating systems which don't allow unreading other than the most
	recently read character. InputSource::unreadCh is no longer used
	internally within libqpdf.

2020-10-16  Jay Berkenbilt  <ejb@ql.org>

	* Accept pull request that improves how the Windows native crypto
	provider is obtained.

	* Accept pull request that improves performance in processing
	files in memory.

	* Accept pull requests that improve openssl configuration and
	error reporting.

	* Build using GitHub Actions. The intention is that this will
	replace Azure Pipelines as the official CI for qpdf for the next
	release.

2020-04-29  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix: qpdf --check was writing errors and warnings reported
	by checkLinearization to stdout instead of stderr. Fixes #438.

2020-04-09  Jay Berkenbilt  <ejb@ql.org>

	* 10.0.1: release

2020-04-08  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix: qpdf 10.0.0 introduced a bug in which
	QPDFObjectHandle::getStreamData would return the raw data when
	called on an unfilterable stream instead of throwing an exception
	like it's supposed to. Fixes #425.

2020-04-07  Jay Berkenbilt  <ejb@ql.org>

	* Improve pdf-invert-images example to show a pattern of copying
	streams into another QPDF object to enable a stream data provider
	to access the original stream data.

	* Fix error that caused a compilation error with clang. Fixes
	#424.

2020-04-06  Jay Berkenbilt  <ejb@ql.org>

	* 10.0.0: release

	* Move random number generation into the crypto providers. The old